Ok, this is a wip, but it is not broken, it creates a default dekstop with icons, windows, widgets and background

--- a/themes/lliurex-desktop/metadata.desktop
+++ b/themes/lliurex-desktop/metadata.desktop
@@ -10,6 +10,12 @@ X-KDE-PluginInfo-EnabledByDefault=true
 X-Plasma-API=5.0
 
 [Wallpaper]
-defaultWallpaperTheme=LliureX-Desktop
+defaultWallpaperTheme=lliurex-desktop
 defaultWidth=1920
 defaultHeight=1080
+
+[ContrastEffect]
+enabled=true
+contrast=0.2
+intensity=2.0
+saturation=1.7
