--- a/wallpapers/lliurex-desktop/metadata.desktop
+++ b/wallpapers/lliurex-desktop/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=LliureX 19 Desktop
+Name=LliureX-Desktop
 
 X-KDE-PluginInfo-Name=LliureX-Desktop
 X-KDE-PluginInfo-Author=Enrique Medina Gremaldos
