--- a/look-and-feel/lliurex-desktop-classic/metadata.desktop
+++ b/look-and-feel/lliurex-desktop-classic/metadata.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
-Comment=Lliurex mockup
-Name=lliurex-desktop
+Comment=Lliurex classic mockup
+Name=lliurex-desktop-classic
 X-KDE-PluginInfo-Author=
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-PluginInfo-License=
-X-KDE-PluginInfo-Name=lliurex-desktop
+X-KDE-PluginInfo-Name=lliurex-desktop-classic
 X-KDE-PluginInfo-Version=0.3
 X-KDE-ServiceTypes=Plasma/LookAndFeel
