--- a/debian/control
+++ b/debian/control
@@ -5,15 +5,33 @@ Maintainer: LliureX Team <lliurex@gva.es>
 Build-Depends: debhelper (>= 10)
 Standards-Version: 4.1.2
 
-Package: lliurex-artwork-kwin-theme
+Package: lliurex-desktop-kwin-theme
 Architecture: all
 Section: x11
 Depends: kwin-style-breeze
 Description: LliureX's 19 kwin theme
  LliureX's 19 default KWin theme, based on auroae engine
 
-Package: lliurex-artwork-color-scheme
+Package: lliurex-desktop-color-scheme
 Architecture: all
 Section: x11
 Description: LliureX 19 color scheme
  LliureX 19 default KDE color scheme
+
+Package: lliurex-desktop-plasma-look-and-feel
+Architecture: all
+Section: x11
+Description: LliureX 19 plasma look and feel theme
+ LliureX 19 default KDE Plasma look and feel themes (classic and default)
+ 
+ Package: lliurex-desktop-plasma-theme
+Architecture: all
+Section: x11
+Description: LliureX 19 plasma theme
+ LliureX 19 default KDE Plasma theme
+ 
+ Package: lliurex-desktop-defaults
+Architecture: all
+Section: x11
+Description: LliureX 19 xdg defaults 
+ LliureX 19 xdg scripts
