added wallpaper package

--- a/debian/control
+++ b/debian/control
@@ -30,6 +30,12 @@ Section: x11
 Description: LliureX 19 plasma theme
  LliureX 19 default KDE Plasma theme
  
+ Package: lliurex-desktop-wallpaper
+Architecture: all
+Section: x11
+Description: LliureX 19 desktop wallpaper
+ LliureX 19 desktop wallpaper with KDE plasma package
+ 
  Package: lliurex-desktop-defaults
 Architecture: all
 Section: x11
