--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: lliurex-artwork
 Section: x11
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: debhelper (>= 10)
+Build-Depends: debhelper (>= 10), librsvg2-bin
 Standards-Version: 4.1.2
 
 Package: lliurex-desktop-kwin-theme
