* Changed wallpaper with... another lliurex-made wallpaper * Panels are now full opaque * Custom start here icon * Changed kwin theme color to match breeze background * Added a breeze gimp palette * Changed taskbar selection (proof of concept)

--- a/desktoptheme/lliurex-desktop/metadata.desktop
+++ b/desktoptheme/lliurex-desktop/metadata.desktop
@@ -15,7 +15,7 @@ defaultWidth=1920
 defaultHeight=1080
 
 [ContrastEffect]
-enabled=true
+enabled=false
 contrast=0.2
 intensity=2.0
 saturation=1.7
