* Server checking is only enabled at theme.conf * Server checking is scheduled, no longer on-shoot at entry

--- a/defaults/sddm/80-lliurex.conf
+++ b/defaults/sddm/80-lliurex.conf
@@ -9,8 +9,9 @@ RebootCommand=
 InputMethod=
 
 [Theme]
-Current=lliurex
+Current=lliurex-desktop
 CursorTheme=breeze_cursors
+EnableAvatars=false
 
 [Users]
 MaximumUid=60000
