* created classroom plasma theme * created classroom defaults

--- a/debian/control
+++ b/debian/control
@@ -56,6 +56,12 @@ Depdends: lliurex-desktop-sddm-theme
 Description: LliureX classroom sddm theme
  LliureX 19 Classroom custom sddm theme
 
+Package: lliurex-classroom-plasma-theme
+Architecture: all
+Section: x11
+Description: LliureX 19 classroom plasma theme
+ LliureX 19 classroom KDE Plasma theme
+
 Package: lliurex-classroom-wallpaper
 Architecture: all
 Section: x11
@@ -64,7 +70,7 @@ Description: LliureX 19 classroom wallpaper
 
 Package: lliurex-classroom-defaults
 Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-classroom-wallpaper, lliurex-classroom-sddm-theme
+Depends: lliurex-desktop-defaults, lliurex-classroom-wallpaper, lliurex-classroom-plasma-theme, lliurex-classroom-sddm-theme
 Section: x11
 Description: LliureX 19 classroom xdg defaults 
  LliureX 19 xdg scripts
