Fixed sunset wallpaper display name

--- a/wallpapers/lliurex-sunset/metadata.desktop
+++ b/wallpapers/lliurex-sunset/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Name=LliureX-Desktop
+Name=LliureX-Sunset
 
 X-KDE-PluginInfo-Name=LliureX-Sunset
 X-KDE-PluginInfo-Author=Hector Garcia Huerta
