--- a/debian/control
+++ b/debian/control
@@ -38,7 +38,7 @@ Description: LliureX 19.7 desktop wallpaper
 Package: lliurex-desktop-defaults
 Architecture: all
 Conflicts: neon-adwaita
-Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-desktop-wallpaper, lliurex-desktop-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget
+Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-desktop-wallpaper, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget
 Section: x11
 Description: LliureX 19.7 xdg defaults 
  LliureX 19.7 xdg scripts
@@ -57,14 +57,14 @@ Description: LliureX 19.7 classroom wallpaper
 
 Package: lliurex-classroom-defaults
 Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-classroom-wallpaper, lliurex-classroom-plasma-theme, lliurex-classroom-sddm-theme
+Depends: lliurex-desktop-defaults, lliurex-classroom-wallpaper, lliurex-classroom-plasma-theme, lliurex-sddm-theme
 Section: x11
 Description: LliureX 19.7 classroom xdg defaults 
  LliureX 19.7 xdg scripts
 
 Package: lliurex-server-defaults
 Architecture: all
-Depends: lliurex-classroom-defaults, lliurex-server-sddm-theme
+Depends: lliurex-classroom-defaults, lliurex-sddm-theme
 Section: x11
 Description: LliureX 19.7 server xdg defaults 
  LliureX 19.7 xdg scripts
