* moved default background to 19+1 * crated a fake 21 wallaper while real one is developed

--- a/wallpapers/lliurex-infantil/metadata.desktop
+++ b/wallpapers/lliurex-infantil/metadata.desktop
@@ -2,5 +2,4 @@
 Name=LliureX-Infantil
 
 X-KDE-PluginInfo-Name=LliureX-Infantil
-X-KDE-PluginInfo-Author=Enrique Medina Gremaldos
-X-KDE-PluginInfo-Email=quiqueiii@gmail.com
+X-KDE-PluginInfo-Author=Lliurex Team
