--- a/wallpapers/lliurex-sunset/metadata.desktop
+++ b/wallpapers/lliurex-sunset/metadata.desktop
@@ -2,5 +2,4 @@
 Name=LliureX-Sunset
 
 X-KDE-PluginInfo-Name=LliureX-Sunset
-X-KDE-PluginInfo-Author=Hector Garcia Huerta
-X-KDE-PluginInfo-Email=hectorgh@gmail.com
+X-KDE-PluginInfo-Author=Lliurex Team
