--- a/wallpapers/lliurex-xiquets/metadata.desktop
+++ b/wallpapers/lliurex-xiquets/metadata.desktop
@@ -1,5 +1,4 @@
 [Desktop Entry]
 Name=LliureX-Xiquets
 X-KDE-PluginInfo-Name=LliureX-Xiquets
-X-KDE-PluginInfo-Author=Enrique Medina Gremaldos
-X-KDE-PluginInfo-Email=quiqueiii@gmail.com
+X-KDE-PluginInfo-Author=Lliurex Team
