--- a/look-and-feel/net.lliurex.classic/metadata.desktop
+++ b/look-and-feel/net.lliurex.classic/metadata.desktop
@@ -1,11 +1,11 @@
 [Desktop Entry]
 Comment=Lliurex classic mockup
-Name=lliurex-desktop-classic
+Name=lliurex desktop classic
 X-KDE-PluginInfo-Author=
 X-KDE-PluginInfo-Category=
 X-KDE-PluginInfo-Email=
 X-KDE-PluginInfo-EnabledByDefault=true
 X-KDE-PluginInfo-License=
-X-KDE-PluginInfo-Name=lliurex-desktop-classic
+X-KDE-PluginInfo-Name=net.lliurex.classic
 X-KDE-PluginInfo-Version=0.3
 X-KDE-ServiceTypes=Plasma/LookAndFeel
