wip bringing new wallpapers

--- a/wallpapers/lliurex-classroom/metadata.desktop
+++ b/wallpapers/lliurex-classroom/metadata.desktop
@@ -2,4 +2,4 @@
 Name=LliureX-Desktop
 
 X-KDE-PluginInfo-Name=LliureX-Classroom
-X-KDE-PluginInfo-Author=Lliurex Team
+X-KDE-PluginInfo-Author=Pablo Broseta
