--- a/wallpapers/lliurex-desktop/metadata.desktop
+++ b/wallpapers/lliurex-desktop/metadata.desktop
@@ -2,4 +2,4 @@
 Name=LliureX-Desktop
 
 X-KDE-PluginInfo-Name=LliureX-Desktop
-X-KDE-PluginInfo-Author=Lliurex Team
+X-KDE-PluginInfo-Author=Pablo Broseta
