--- a/wallpapers/lliurex-infantil/metadata.desktop
+++ b/wallpapers/lliurex-infantil/metadata.desktop
@@ -2,4 +2,4 @@
 Name=LliureX-Infantil
 
 X-KDE-PluginInfo-Name=LliureX-Infantil
-X-KDE-PluginInfo-Author=Lliurex Team
+X-KDE-PluginInfo-Author=Pablo Broseta
