--- a/wallpapers/lliurex-musica/metadata.desktop
+++ b/wallpapers/lliurex-musica/metadata.desktop
@@ -2,4 +2,4 @@
 Name=LliureX-Musica
 
 X-KDE-PluginInfo-Name=LliureX-Musica
-X-KDE-PluginInfo-Author=Lliurex Team
+X-KDE-PluginInfo-Author=Pablo Bruseta
