--- a/wallpapers/lliurex-escriptori/metadata.desktop
+++ b/wallpapers/lliurex-escriptori/metadata.desktop
@@ -1,5 +1,5 @@
 [Desktop Entry]
 Name=LliureX Escriptori
 
-X-KDE-PluginInfo-Name=LliureX Escriptori
+X-KDE-PluginInfo-Name=lliurex-escriptori
 X-KDE-PluginInfo-Author=Pablo Broseta
