* Added locale support to qml stuff * Using CC by-sa 4.0 as wallpaper license

--- a/wallpapers/lliurex-escriptori/metadata.desktop
+++ b/wallpapers/lliurex-escriptori/metadata.desktop
@@ -3,3 +3,4 @@ Name=LliureX Escriptori
 
 X-KDE-PluginInfo-Name=lliurex-escriptori
 X-KDE-PluginInfo-Author=Pablo Broseta
+X-KDE-PluginInfo-License=CC-BY-SA-4.0
