--- a/wallpapers/lliurex-aula/metadata.desktop
+++ b/wallpapers/lliurex-aula/metadata.desktop
@@ -3,3 +3,4 @@ Name=LliureX Aula
 
 X-KDE-PluginInfo-Name=LliureX Aula
 X-KDE-PluginInfo-Author=Pablo Broseta
+X-KDE-PluginInfo-License=CC-BY-SA-4.0
