--- a/wallpapers/lliurex-infantil/metadata.desktop
+++ b/wallpapers/lliurex-infantil/metadata.desktop
@@ -3,3 +3,4 @@ Name=LliureX-Infantil
 
 X-KDE-PluginInfo-Name=LliureX-Infantil
 X-KDE-PluginInfo-Author=Pablo Broseta
+X-KDE-PluginInfo-License=CC-BY-SA-4.0
