--- a/wallpapers/lliurex-musica/metadata.desktop
+++ b/wallpapers/lliurex-musica/metadata.desktop
@@ -3,3 +3,4 @@ Name=LliureX-Musica
 
 X-KDE-PluginInfo-Name=LliureX-Musica
 X-KDE-PluginInfo-Author=Pablo Bruseta
+X-KDE-PluginInfo-License=CC-BY-SA-4.0
