--- a/wallpapers/lliurex-neutro/metadata.desktop
+++ b/wallpapers/lliurex-neutro/metadata.desktop
@@ -3,3 +3,4 @@ Name=LliureX Neutro
 
 X-KDE-PluginInfo-Name=LliureX Neutro
 X-KDE-PluginInfo-Author=Pablo Broseta
+X-KDE-PluginInfo-License=CC-BY-SA-4.0
