--- a/debian/control
+++ b/debian/control
@@ -30,84 +30,41 @@ Section: x11
 Description: LliureX 21.23 plasma theme
  LliureX 21.23 default KDE Plasma theme
 
-Package: lliurex-desktop-wallpaper
-Architecture: all
-Section: x11
-Depends: qml-module-edupals-base
-Description: LliureX 21.23 desktop wallpaper
- LliureX 21.23 desktop wallpaper with KDE plasma package
-
 Package: lliurex-desktop-defaults
 Architecture: all
 Conflicts: neon-adwaita
-Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-desktop-wallpaper, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, lliurex-breeze-gtk-theme, qml-module-lliurex-ui
+Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, lliurex-breeze-gtk-theme, qml-module-lliurex-ui
 Section: x11
 Description: LliureX 21.23 xdg defaults
  LliureX 21.23 xdg scripts
 
 Package: lliurex-touch-defaults
 Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-touch-wallpaper
+Depends: lliurex-desktop-defaults
 Section: x11
 Description: LliureX 21.23 touch xdg defaults
  LliureX 21.23 xdg scripts
 
-Package: lliurex-touch-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 21.23 touch wallpaper
- LliureX 21.23 touch wallpaper with KDE plasma package
-
-Package: lliurex-classroom-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 21.23 classroom wallpaper
- LliureX 21.23 classroom wallpaper with KDE plasma package
-
 Package: lliurex-classroom-defaults
 Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-classroom-wallpaper, lliurex-sddm-theme
+Depends: lliurex-desktop-defaults, lliurex-sddm-theme
 Section: x11
 Description: LliureX 21.23 classroom xdg defaults
  LliureX 21.23 xdg scripts
 
 Package: lliurex-server-defaults
 Architecture: all
-Depends: lliurex-classroom-defaults, lliurex-server-wallpaper, lliurex-sddm-theme
+Depends: lliurex-classroom-defaults, lliurex-sddm-theme
 Section: x11
 Description: LliureX 21.23 server xdg defaults
  LliureX 21.23 xdg scripts
 
-Package: lliurex-server-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 21.23 Server wallpaper
- LliureX 21.23 Server wallpaper with KDE plasma package
-
-Package: lliurex-fp-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 21.23 FP wallpaper
- LliureX 21.23 FP wallpaper with KDE plasma package
-
 Package: lliurex-fp-defaults
 Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-fp-wallpaper
+Depends: lliurex-desktop-defaults
 Section: x11
 Description: LliureX 21.23 FP xdg defaults
  LliureX 21.23 FP xdg scripts
-
-Package: lliurex-19-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 19 Desktop wallpaper
- Old LliureX 19 wallpaper with KDE plasma package
-
-Package: lliurex-21-wallpaper
-Architecture: all
-Section: x11
-Description: LliureX 21 Desktop wallpaper
- Old LliureX 21 wallpaper with KDE plasma package
 
 Package: lliurex-breeze-gtk-theme
 Architecture: all
