--- a/debian/control
+++ b/debian/control
@@ -2,74 +2,39 @@ Source: lliurex-artwork
 Section: x11
 Priority: optional
 Maintainer: LliureX Team <lliurex@gva.es>
-Build-Depends: debhelper (>= 10), librsvg2-bin, imagemagick-6.q16
-Standards-Version: 4.1.2
+Build-Depends: debhelper-compat (= 13), librsvg2-bin, imagemagick-6.q16
+Standards-Version: 4.6.0
+Rules-Requires-Root: no
 
 Package: lliurex-desktop-icon-theme
 Architecture: all
 Section: x11
-Description: LliureX 21.23 icon theme
- LliureX 21.23 icon theme based on Breeze
+Description: LliureX 25 icon theme
+ LliureX 25 icon theme based on Breeze
 
 Package: lliurex-desktop-color-scheme
 Architecture: all
 Section: x11
-Description: LliureX 21.23 color scheme
- LliureX 22 default KDE color scheme
+Description: LliureX 25 color scheme
+ LliureX 25 default KDE color scheme
 
 Package: lliurex-desktop-plasma-look-and-feel
 Architecture: all
 Section: x11
 Depends: qml-module-lliurex-ui
-Description: LliureX 21.23 plasma look and feel theme
- LliureX 21.23 default KDE Plasma look and feel themes (classic and default)
+Description: LliureX 25 plasma look and feel theme
+ LliureX 25 default KDE Plasma look and feel theme
 
 Package: lliurex-desktop-plasma-theme
 Architecture: all
 Section: x11
-Description: LliureX 21.23 plasma theme
- LliureX 21.23 default KDE Plasma theme
+Description: LliureX 25 plasma theme
+ LliureX 25 default KDE Plasma theme
 
 Package: lliurex-desktop-defaults
 Architecture: all
 Conflicts: neon-adwaita
-Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, lliurex-breeze-gtk-theme, qml-module-lliurex-ui
+Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, qml-module-lliurex-ui
 Section: x11
-Description: LliureX 21.23 xdg defaults
- LliureX 21.23 xdg scripts
-
-Package: lliurex-touch-defaults
-Architecture: all
-Depends: lliurex-desktop-defaults
-Section: x11
-Description: LliureX 21.23 touch xdg defaults
- LliureX 21.23 xdg scripts
-
-Package: lliurex-classroom-defaults
-Architecture: all
-Depends: lliurex-desktop-defaults, lliurex-sddm-theme
-Section: x11
-Description: LliureX 21.23 classroom xdg defaults
- LliureX 21.23 xdg scripts
-
-Package: lliurex-server-defaults
-Architecture: all
-Depends: lliurex-classroom-defaults, lliurex-sddm-theme
-Section: x11
-Description: LliureX 21.23 server xdg defaults
- LliureX 21.23 xdg scripts
-
-Package: lliurex-fp-defaults
-Architecture: all
-Depends: lliurex-desktop-defaults
-Section: x11
-Description: LliureX 21.23 FP xdg defaults
- LliureX 21.23 FP xdg scripts
-
-Package: lliurex-breeze-gtk-theme
-Architecture: all
-Depends: breeze-gtk-theme
-Section: x11
-Description: LliureX 21.23 fix for breeze-gtk-theme
- LliureX 21.23 custom css to fix vertical spinbuttons and togglebuttons
- 
+Description: LliureX 25 xdg defaults
+ LliureX 25 xdg scripts
