--- a/debian/control
+++ b/debian/control
@@ -21,7 +21,7 @@ Description: LliureX 25 color scheme
 Package: lliurex-desktop-plasma-look-and-feel
 Architecture: all
 Section: x11
-Depends: qml-module-lliurex-ui
+Depends: qml6-module-lliurex-ui, qml6-module-edupals-base, kf6-coreaddons
 Description: LliureX 25 plasma look and feel theme
  LliureX 25 default KDE Plasma look and feel theme
 
@@ -34,7 +34,7 @@ Description: LliureX 25 plasma theme
 Package: lliurex-desktop-defaults
 Architecture: all
 Conflicts: neon-adwaita
-Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, qml-module-lliurex-ui
+Depends: lliurex-desktop-color-scheme, lliurex-desktop-icon-theme, lliurex-desktop-plasma-look-and-feel, lliurex-desktop-plasma-theme, lliurex-sddm-theme, lliurex-plymouth-theme, plasma-applet-places-widget, qml6-module-lliurex-ui
 Section: x11
 Description: LliureX 25 xdg defaults
  LliureX 25 xdg scripts
